<resources>
    <string name="app_name">MyMartlet</string>
    <string name="team_name">Appvelopers</string>
    <string name="title_login">Login</string>
    <string name="title_desktop">Desktop Site</string>
    <string name="title_schedule">My Schedule</string>
    <string name="title_transcript">My Transcript</string>
    <string name="title_mycourses">MyCourses</string>
    <string name="title_ebill">My eBill</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_map">Campus Map</string>
    <string name="title_change_semester">Change Semester</string>
    <string name="title_registration">Search for Courses</string>
    <string name="title_wishlist">My Course Wishlist</string>
    <string name="title_about">About Us</string>
    <string name="title_courses">My Classes</string>
    <string name="title_help">Help</string>
    <string name="title_report_bug">Report a Problem</string>
    <string name="title_facebook">Share</string>
    <string name="title_twitter">Tweet</string>
    <string name="facebook_id">828093890556007</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="done">Done</string>
    <string name="refresh">Refresh</string>
    <string name="error_no_internet">You are not connected to the internet. Please connect to the internet and try again. </string>
    <string name="error_other">An error has occurred. Please try again later.</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="bug_parser_transcript">There was a bug while downloading your transcript. Unfortunately we cannot fix it without seeing what caused it. Do you agree to submit a bug report indicating that you are willing to meet with us ?</string>
    <string name="bug_parser_semester">There was a bug while downloading the following semester\'s classes: %s. Unfortunately we cannot fix it without seeing what caused it. Do you agree to submit a bug report indicating that you are willing to meet with us ?</string>
    <string name="bug_parser_yes">Yes, submit a bug report and have the developers contact me</string>
    <string name="bug_parser_no">No, do not submit a bug report, I will live without the missing information. </string>
    <string name="bug_parser">For developers: Exception caught: %s</string>
    <string name="bug_parser_no_show">Don\'t show this to me again</string>
    <string name="bug_parser_transcript_title">Parsing bug in Transcript for: %s</string>
    <string name="bug_parser_semester_title">Parsing bug in Semester for Semester %1$s and Class %2$s</string>
    <string name="skip_loading">If you continue, your most recent information (current schedule and transcript) will not automatically be updated. Continue ?</string>
    <string name="icon_chevronRight">&#xf054;</string>
    <string name="icon_schedule">&#xf073;</string>
    <string name="icon_settings">&#xf013;</string>
    <string name="icon_desktop">&#xf108;</string>
    <string name="icon_email">&#xf0e0;</string>
    <string name="icon_mycourses">&#xf19c;</string>
    <string name="icon_ebill">&#xf155;</string>
    <string name="icon_transcript">&#xf15c;</string>
    <string name="icon_map">&#xf041;</string>
    <string name="icon_logout">&#xf0a9;</string>
    <string name="icon_bug">&#xf188;</string>
    <string name="icon_security">&#xf023;</string>
    <string name="icon_question">&#xf128;</string>
    <string name="icon_linkedin">&#xf08c;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_courses">&#xf02d;</string>
    <string name="icon_info">&#xf05a;</string>
    <string name="icon_facebook">&#xf082;</string>
    <string name="icon_twitter">&#xf081;</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="faculty_enviro">Faculty of Agricultural and Environmental Sciences</string>
    <string name="faculty_arts">Faculty of Arts</string>
    <string name="faculty_continuing_studies">School of Continuing Studies</string>
    <string name="faculty_dentistry">Faculty of Dentistry</string>
    <string name="faculty_education">Faculty of Education</string>
    <string name="faculty_engineering">Faculty of Engineering</string>
    <string name="faculty_graduate">Graduate and Postdoctoral Studies</string>
    <string name="faculty_law">Faculty of Law</string>
    <string name="faculty_management">Desautels Faculty of Management</string>
    <string name="faculty_medecine">Faculty of Medicine</string>
    <string name="faculty_music">Schulich School of Music</string>
    <string name="faculty_religion">Faculty of Religious Studies</string>
    <string name="faculty_science">Faculty of Science</string>
    <string name="login_welcome">Welcome to MyMartlet. Please input your McGill username and password below.</string>
    <string name="login_username">Username: </string>
    <string name="login_email">\@mail.mcgill.ca</string>
    <string name="login_password">Password: </string>
    <string name="login_button">Login</string>
    <string name="login_error_wrong_data">The username or password you have entered is incorrect. Please try again. </string>
    <string name="login_error_username_empty">You must input a username.</string>
    <string name="login_error_password_empty">You must input a password. </string>
    <string name="login_remember_username">Remember my username</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_dialog_positive">Yes</string>
    <string name="logout_dialog_negative">Cancel</string>
    <string name="transcript_termGPA">Term GPA: %s</string>
    <string name="transcript_CGPA">CGPA: %s</string>
    <string name="transcript_credits">Total Credits: %s</string>
    <string name="transcript_semesters">Semesters: </string>
    <string name="transcript_error">We are unable to load your transcript. Please try again later.</string>
    <string name="semester_termCredits">Term Credits: %s</string>
    <string name="semester_fullTime">Full Time</string>
    <string name="semester_partTime">Part Time</string>
    <string name="semester_courses">Courses: </string>
    <string name="course_credits">Credits: %s</string>
    <string name="course_average">Class Average: %s</string>
    <string name="am">%s A.M.</string>
    <string name="pm">%s P.M.</string>
    <string name="am_long">%1$s:%2$s A.M.</string>
    <string name="pm_long">%1$s:%2$s P.M.</string>
    <string name="course_time">%1$s - %2$s</string>
    <string name="schedule_change_semester">Change Semester</string>
    <string name="course_time_title">Time: </string>
    <string name="course_location">Room: </string>
    <string name="schedule_type">Schedule Type: </string>
    <string name="course_prof">Professor: </string>
    <string name="course_section">Section: </string>
    <string name="course_credits_title">Credits: </string>
    <string name="course_crn">CRN: </string>
    <string name="course_docuum">View Course on Docuum</string>
    <string name="course_map">Show on Map</string>
    <string name="ebill_statement_date">Statement Date:</string>
    <string name="ebill_due_date">Due Date:</string>
    <string name="ebill_amount">Amount Due: </string>
    <string name="settings_language">Language</string>
    <string name="settings_homepage">Homepage</string>
    <string name="settings_statistics">Allow Anonymous Usage Statistics </string>
    <string name="homepage_schedule">Schedule</string>
    <string name="homepage_transcript">Transcript</string>
    <string name="homepage_mycourses">MyCourses</string>
    <string name="homepage_search">Courses Search</string>
    <string name="homepage_wishlist">Wishlist</string>
    <string name="homepage_ebill">eBill</string>
    <string name="homepage_map">Campus Map</string>
    <string name="homepage_desktop">Desktop Site</string>
    <string name="settings_version">Version %s</string>
    <string name="change_semester_season">Season: </string>
    <string name="change_semester_year">Year:</string>
    <string name="change_semester_default">Set as Default</string>
    <string name="registration_semester">Semester:</string>
    <string name="registration_subject">Subject (ex: MATH):</string>
    <string name="registration_course_number">Course Number:</string>
    <string name="registration_invalid_subject">Invalid subject: Please a enter four character subject.</string>
    <string name="registration_error">Registration Error</string>
    <string name="registration_success">Registration Successful!</string>
    <string name="registration_faculty">Faculty:</string>
    <string name="registration_title">Title:</string>
    <string name="registration_start_time">Start Time:</string>
    <string name="registration_end_time">End Time:</string>
    <string name="registration_days">Days:</string>
    <string name="registration_credits">Credit Range:</string>
    <string name="registration_credits_hours">hours</string>
    <string name="registration_spots">%s spot(s) left</string>
    <string name="registration_waitlist">Waitlist Spots: %s</string>
    <string name="registration_reset">RESET</string>
    <string name="registration_error_no_faculty">You must either select a faculty or input a course subject.</string>
    <string name="registration_error_credits">The maximum hours must be bigger than the minimum hours</string>
    <string name="registration_show_options">Show More Options</string>
    <string name="registration_hide_options">Show Fewer Options</string>
    <string name="unregistration_success">Unregistration Successful!</string>
    <string name="unregistration_error">Unregistration Error</string>
    <string name="walkthrough_welcome">Welcome to MyMartlet, the unofficial app for McGill University students! </string>
    <string name="walkthrough_offline">This app keeps you connected at all times, so no need to log in constantly!  You can use the app offline too!</string>
    <string name="walkthrough_security">All of your data (password included) is only stored locally on your phone. As an extra security measure, your password is encrypted. We will be collecting anonymous usage statistics, but you can opt out at any time in the Settings.</string>
    <string name="walkthrough_email">Set up your McGill email account on your device by going to Settings -> Help -> Set up your Email</string>
    <string name="courses_empty">No Courses Available</string>
    <string name="courses_register">Register</string>
    <string name="courses_add_wishlist">Add to Wishlist</string>
    <string name="about_FAQ">FAQ</string>
    <string name="help_walkthrough">User Guide</string>
    <string name="help_email_walkthrough">Set up your email on your device</string>
    <string name="help_download">Don\'t forget to download the official McGill App by clicking here.</string>
    <string name="map_filter">Filter: </string>
    <string name="map_directions">Directions</string>
    <string name="map_favorites_add">Add to Favorites</string>
</resources>