<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/padding_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:text="@string/walkthrough_offline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textColor="@color/red"
        android:text="@string/icon_security"
        android:id="@+id/security_icon"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/padding_micro"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:text="@string/walkthrough_security"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textColor="@color/red"
        android:text="@string/icon_settings"
        android:id="@+id/settings_icon"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/padding_micro"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:text="@string/walkthrough_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:textColor="@color/red"
        android:text="@string/icon_email"
        android:id="@+id/email_icon"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/padding_micro"/>

</LinearLayout>