<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_email_walkthrough"
        android:textColor="@color/black_whitepressed"
        android:textSize="@dimen/text_medium"
        android:id="@+id/help_email"
        android:padding="@dimen/padding_micro"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:background="@drawable/transparent_redpressed"/>

    <include layout="@layout/line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_walkthrough"
        android:textColor="@color/black_whitepressed"
        android:textSize="@dimen/text_medium"
        android:id="@+id/help_walkthrough"
        android:padding="@dimen/padding_micro"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:background="@drawable/transparent_redpressed"/>

    <include layout="@layout/line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_download"
        android:textColor="@color/black_whitepressed"
        android:textSize="@dimen/text_medium"
        android:id="@+id/help_download"
        android:padding="@dimen/padding_micro"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:background="@drawable/transparent_redpressed"/>

    <include layout="@layout/line"/>

    <TextView
        android:padding="@dimen/padding_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_FAQ"
        android:id="@+id/FAQ"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_large"
        android:textStyle="bold|italic"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:listSelector="@android:color/transparent"
        android:id="@+id/helpListView" />

</LinearLayout>