<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_course_container"
    android:background="@color/white">

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_code"
        android:textSize="@dimen/text_large"
        android:textColor="@color/red"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"
        android:textStyle="italic"
        android:gravity="center"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/black"/>

    <ScrollView
        android:paddingTop="@dimen/padding_micro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:text="@string/course_time_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_time"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:paddingLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:paddingTop="@dimen/padding_micro"
                android:text="@string/course_location"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_location"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:paddingTop="@dimen/padding_micro"
                android:text="@string/schedule_type"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_type"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:paddingTop="@dimen/padding_micro"
                android:text="@string/course_prof"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_professor"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:paddingTop="@dimen/padding_micro"
                android:text="@string/course_section"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_section"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:paddingTop="@dimen/padding_micro"
                android:text="@string/course_credits_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_credits"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:paddingTop="@dimen/padding_micro"
                android:text="@string/course_crn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_crn"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/padding_small"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/grey_light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_docuum"
                android:background="@drawable/transparent_redpressed"
                android:textColor="@color/black_whitepressed"
                android:text="@string/course_docuum"
                android:gravity="center"
                android:padding="@dimen/padding_micro"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/grey_light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_map"
                android:background="@drawable/transparent_redpressed"
                android:textColor="@color/black_whitepressed"
                android:text="@string/course_map"
                android:gravity="center"
                android:padding="@dimen/padding_micro"/>

            </LinearLayout>

        </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_darkredpressed"
        android:textColor="@color/white_greypressed"
        android:padding="@dimen/padding_micro"
        android:textSize="@dimen/text_medium"
        android:text="@string/done"
        android:onClick="done"/>

</LinearLayout>