<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courses_empty"
            android:padding="@dimen/padding_medium"
            android:text="@string/courses_empty"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courses_list"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/courses_button_container" />

        <LinearLayout
            android:id="@+id/courses_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/courses_register"
                android:background="@drawable/red_darkredpressed"
                android:textColor="@color/white_greypressed"
                android:padding="@dimen/padding_micro"
                android:textSize="@dimen/text_medium"
                android:gravity="center"
                android:id="@+id/course_register"/>

            <View
                android:layout_width="@dimen/line"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/course_line"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/courses_add_wishlist"
                android:background="@drawable/red_darkredpressed"
                android:textColor="@color/white_greypressed"
                android:padding="@dimen/padding_micro"
                android:textSize="@dimen/text_medium"
                android:gravity="center"
                android:id="@+id/course_wishlist"/>

        </LinearLayout>

    </RelativeLayout>

    <!-- The navigation drawer -->
<include layout="@layout/drawer"/>

</android.support.v4.widget.DrawerLayout>